==> modm-ext/tinyusb-partial/src/portable/silabs/efm32/dcd_efm32.c <==
#include "tusb_option.h"
#include "em_device.h"
#include "device/dcd.h"
#define USE_SOF     0
#define EP_COUNT        7
#define EP_FIFO_SIZE    2048
#define EP_FIFO_NUM     7
#define XFER_CTL_BASE(_ep, _dir) &xfer_status[_ep][_dir]
#define DCTL_WO_BITMASK     (USB_DCTL_CGOUTNAK | USB_DCTL_SGOUTNAK | USB_DCTL_CGNPINNAK | USB_DCTL_SGNPINNAK)
#define GUSBCFG_WO_BITMASK  (USB_GUSBCFG_CORRUPTTXPKT)
#define DEPCTL_WO_BITMASK   (USB_DIEP_CTL_CNAK | USB_DIEP_CTL_SNAK | USB_DIEP_CTL_SETD0PIDEF | USB_DIEP_CTL_SETD1PIDOF)

static void bus_reset(void)
{
  USB->DOEP0CTL |= USB_DIEP_CTL_SNAK;
  for(uint8_t i = 0; i < EP_COUNT - 1; i++)
  {
    USB->DOEP[i].CTL |= USB_DIEP_CTL_SNAK;
  }

  /* reset address */
  USB->DCFG &= ~_USB_DCFG_DEVADDR_MASK;

  USB->DAINTMSK |= USB_DAINTMSK_OUTEPMSK0 | USB_DAINTMSK_INEPMSK0;
  USB->DOEPMSK |= USB_DOEPMSK_SETUPMSK | USB_DOEPMSK_XFERCOMPLMSK;
  USB->DIEPMSK |= USB_DIEPMSK_TIMEOUTMSK | USB_DIEPMSK_XFERCOMPLMSK;

  /*
   * - All EP OUT shared a unique OUT FIFO which uses
   *   * 10 locations in hardware for setup packets + setup control words (up to 3 setup packets).
   *   * 2 locations for OUT endpoint control words.
   *   * 16 for largest packet size of 64 bytes. ( TODO Highspeed is 512 bytes)
   *   * 1 location for global NAK (not required/used here).
   *   * It is recommended to allocate 2 times the largest packet size, therefore
   *  Recommended value = 10 + 1 + 2 x (16+2) = 47 --> Let's make it 52
   */
  flush_tx_fifo(_USB_GRSTCTL_TXFNUM_FALL);  // Flush All
  USB->GRXFSIZ = 52;

  /* Control IN uses FIFO 0 with 64 bytes ( 16 32-bit word ) */
  USB->GNPTXFSIZ = (16 << _USB_GNPTXFSIZ_NPTXFINEPTXF0DEP_SHIFT) | (USB->GRXFSIZ & _USB_GNPTXFSIZ_NPTXFSTADDR_MASK);

  /* Ready to receive SETUP packet */
  USB->DOEP0TSIZ |= (1 << _USB_DOEP0TSIZ_SUPCNT_SHIFT);

  USB->GINTMSK |= USB_GINTMSK_IEPINTMSK | USB_GINTMSK_OEPINTMSK;
}

void dcd_init(uint8_t rhport)
{
  (void) rhport;

  /* Reset Core */
  USB->PCGCCTL &= ~USB_PCGCCTL_STOPPCLK;
  USB->PCGCCTL &= ~(USB_PCGCCTL_PWRCLMP | USB_PCGCCTL_RSTPDWNMODULE);

  /* Core Soft Reset */
  USB->GRSTCTL |= USB_GRSTCTL_CSFTRST;
  while(USB->GRSTCTL & USB_GRSTCTL_CSFTRST);

  while(!(USB->GRSTCTL & USB_GRSTCTL_AHBIDLE));

  /* Enable PHY pins */
  USB->ROUTE = USB_ROUTE_PHYPEN;

  dcd_disconnect(rhport);

  /*
   * Set device speed (Full speed PHY)
   * Stall on non-zero len status OUT packets (ctrl transfers)
   * periodic frame interval to 80%
   */
  USB->DCFG = (USB->DCFG & ~(_USB_DCFG_DEVSPD_MASK | _USB_DCFG_PERFRINT_MASK)) | USB_DCFG_DEVSPD_FS | USB_DCFG_NZSTSOUTHSHK;

  /* Enable Global Interrupts */
  USB->GAHBCFG = (USB->GAHBCFG & ~_USB_GAHBCFG_HBSTLEN_MASK) | USB_GAHBCFG_GLBLINTRMSK;

  /* Force Device Mode */
  USB->GUSBCFG = (USB->GUSBCFG & ~(GUSBCFG_WO_BITMASK | USB_GUSBCFG_FORCEHSTMODE)) | USB_GUSBCFG_FORCEDEVMODE;

  /* No Overrides */
  USB->GOTGCTL &= ~(USB_GOTGCTL_BVALIDOVVAL | USB_GOTGCTL_BVALIDOVEN | USB_GOTGCTL_VBVALIDOVVAL);

  /* Ignore frame numbers on ISO transfers. */
  USB->DCTL = (USB->DCTL & ~DCTL_WO_BITMASK) | USB_DCTL_IGNRFRMNUM;

  /* Setting SNAKs */
  USB->DOEP0CTL |= USB_DIEP_CTL_SNAK;
  for(uint8_t i = 0; i < EP_COUNT - 1; i++)
  {
    USB->DOEP[i].CTL |= USB_DIEP_CTL_SNAK;
  }

  /* D. Interruption masking */
  /* Disable all device interrupts */
  USB->DIEPMSK  = 0;
  USB->DOEPMSK  = 0;
  USB->DAINTMSK = 0;
  USB->DIEPEMPMSK = 0;
  USB->GINTMSK = 0;
  USB->GOTGINT = ~0U; /* clear OTG ints */
  USB->GINTSTS = ~0U; /* clear pending ints */
  USB->GINTMSK = USB_GINTMSK_MODEMISMSK  |
              #if USE_SOF
                 USB_GINTMSK_SOFMSK      |
              #endif
                 USB_GINTMSK_ERLYSUSPMSK |
                 USB_GINTMSK_USBSUSPMSK  |
                 USB_GINTMSK_USBRSTMSK   |
                 USB_GINTMSK_ENUMDONEMSK |
                 USB_GINTMSK_RESETDETMSK |
                 USB_GINTMSK_DISCONNINTMSK;

  NVIC_ClearPendingIRQ(USB_IRQn);

  dcd_connect(rhport);
}

void dcd_edpt_stall(uint8_t rhport, uint8_t ep_addr)
{
  (void) rhport;

  uint8_t const epnum = tu_edpt_number(ep_addr);
  uint8_t const dir = tu_edpt_dir(ep_addr);

  if(dir == TUSB_DIR_IN)
  {
    if(epnum == 0)
    {
      USB->DIEP0CTL = (USB->DIEP0CTL & ~DEPCTL_WO_BITMASK) | USB_DIEP0CTL_SNAK | USB_DIEP0CTL_STALL;

      flush_tx_fifo(_USB_GRSTCTL_TXFNUM_F0);
    }
    else
    {
      /* Only disable currently enabled non-control endpoint */
      if(USB->DIEP[epnum - 1].CTL & USB_DIEP_CTL_EPENA)
      {
        USB->DIEP[epnum - 1].CTL = (USB->DIEP[epnum - 1].CTL & ~DEPCTL_WO_BITMASK) | USB_DIEP_CTL_EPDIS | USB_DIEP_CTL_SNAK | USB_DIEP_CTL_STALL;
        while(!(USB->DIEP[epnum - 1].INT & USB_DIEP_INT_EPDISBLD));
        USB->DIEP[epnum - 1].INT |= USB_DIEP_INT_EPDISBLD;
      }
      else
      {
        USB->DIEP[epnum - 1].CTL = (USB->DIEP[epnum - 1].CTL & ~DEPCTL_WO_BITMASK) | USB_DIEP_CTL_SNAK | USB_DIEP_CTL_STALL;
      }

      /* Flush the FIFO */
      uint8_t const fifo_num = ((USB->DIEP[epnum - 1].CTL & _USB_DIEP_CTL_TXFNUM_MASK) >> _USB_DIEP_CTL_TXFNUM_SHIFT);
      flush_tx_fifo(fifo_num);
    }
  }
  else
  {
    if(epnum == 0)
    {
      USB->DOEP0CTL = (USB->DOEP0CTL & ~DEPCTL_WO_BITMASK) | USB_DIEP0CTL_STALL;
    }
    else
    {
      /* Only disable currently enabled non-control endpoint */
      if(USB->DOEP[epnum - 1].CTL & USB_DIEP_CTL_EPENA)
      {
        /* Asserting GONAK is required to STALL an OUT endpoint. */
        USB->DCTL |= USB_DCTL_SGOUTNAK;
        while(!(USB->GINTSTS & USB_GINTSTS_GOUTNAKEFF));

        /* Disable the endpoint. Note that only STALL and not SNAK is set here. */
        USB->DOEP[epnum - 1].CTL = (USB->DOEP[epnum - 1].CTL & ~DEPCTL_WO_BITMASK) | USB_DIEP_CTL_EPDIS | USB_DIEP_CTL_STALL;
        while(USB->DOEP[epnum - 1].INT & USB_DIEP_INT_EPDISBLD);
        USB->DOEP[epnum - 1].INT |= USB_DIEP_INT_EPDISBLD;

        /* Allow other OUT endpoints to keep receiving. */
        USB->DCTL |= USB_DCTL_CGOUTNAK;
      }
      else
      {
        USB->DIEP[epnum - 1].CTL = (USB->DIEP[epnum - 1].CTL & ~DEPCTL_WO_BITMASK) | USB_DIEP_CTL_STALL;
      }
    }
  }
}

void dcd_edpt_clear_stall(uint8_t rhport, uint8_t ep_addr)
{
  (void) rhport;

  uint8_t const epnum = tu_edpt_number(ep_addr);
  uint8_t const dir = tu_edpt_dir(ep_addr);

  if(dir == TUSB_DIR_IN)
  {
    if(epnum == 0)
    {
      USB->DIEP0CTL &= ~(DEPCTL_WO_BITMASK | USB_DIEP0CTL_STALL);
    }
    else
    {
      USB->DIEP[epnum - 1].CTL &= ~(DEPCTL_WO_BITMASK | USB_DIEP_CTL_STALL);

      /* Required by USB spec to reset DATA toggle bit to DATA0 on interrupt and bulk endpoints. */
      uint8_t eptype = (USB->DIEP[epnum - 1].CTL & _USB_DIEP_CTL_EPTYPE_MASK) >> _USB_DIEP_CTL_EPTYPE_SHIFT;

      if((eptype == _USB_DIEP_CTL_EPTYPE_BULK) || (eptype == _USB_DIEP_CTL_EPTYPE_INT))
      {
        USB->DIEP[epnum - 1].CTL |= USB_DIEP_CTL_SETD0PIDEF;
      }
    }
  }
  else
  {
    if(epnum == 0)
    {
      USB->DOEP0CTL &= ~(DEPCTL_WO_BITMASK | USB_DOEP0CTL_STALL);
    }
    else
    {
      USB->DOEP[epnum - 1].CTL &= ~(DEPCTL_WO_BITMASK | USB_DOEP_CTL_STALL);

      /* Required by USB spec to reset DATA toggle bit to DATA0 on interrupt and bulk endpoints. */
      uint8_t eptype = (USB->DOEP[epnum - 1].CTL & _USB_DOEP_CTL_EPTYPE_MASK) >> _USB_DOEP_CTL_EPTYPE_SHIFT;

      if((eptype == _USB_DOEP_CTL_EPTYPE_BULK) || (eptype == _USB_DOEP_CTL_EPTYPE_INT))
      {
        USB->DOEP[epnum - 1].CTL |= USB_DOEP_CTL_SETD0PIDEF;
      }
    }
  }
}

bool dcd_edpt_open(uint8_t rhport, tusb_desc_endpoint_t const * p_endpoint_desc)
{
  (void)rhport;

  uint8_t const epnum = tu_edpt_number(p_endpoint_desc->bEndpointAddress);
  uint8_t const dir = tu_edpt_dir(p_endpoint_desc->bEndpointAddress);

  TU_ASSERT(p_endpoint_desc->wMaxPacketSize.size <= 64);
  TU_ASSERT(epnum < EP_COUNT);
  TU_ASSERT(epnum != 0);

  xfer_ctl_t *xfer = XFER_CTL_BASE(epnum, dir);
  xfer->max_size = p_endpoint_desc->wMaxPacketSize.size;

  if(dir == TUSB_DIR_OUT)
  {
    USB->DOEP[epnum - 1].CTL |= USB_DOEP_CTL_USBACTEP |
                                (p_endpoint_desc->bmAttributes.xfer << _USB_DOEP_CTL_EPTYPE_SHIFT) |
                                (p_endpoint_desc->wMaxPacketSize.size << _USB_DOEP_CTL_MPS_SHIFT);
    USB->DAINTMSK |= (1 << (_USB_DAINTMSK_OUTEPMSK0_SHIFT + epnum));
  }
  else
  {
    uint8_t fifo_num = get_free_fifo();
    TU_ASSERT(fifo_num != 0);

    USB->DIEP[epnum - 1].CTL &= ~(_USB_DIEP_CTL_TXFNUM_MASK | _USB_DIEP_CTL_EPTYPE_MASK | USB_DIEP_CTL_SETD0PIDEF | _USB_DIEP_CTL_MPS_MASK);
    USB->DIEP[epnum - 1].CTL |= USB_DIEP_CTL_USBACTEP |
                                (fifo_num << _USB_DIEP_CTL_TXFNUM_SHIFT) |
                                (p_endpoint_desc->bmAttributes.xfer << _USB_DIEP_CTL_EPTYPE_SHIFT) |
                                ((p_endpoint_desc->bmAttributes.xfer != TUSB_XFER_ISOCHRONOUS) ? USB_DIEP_CTL_SETD0PIDEF : 0) |
                                (p_endpoint_desc->wMaxPacketSize.size << 0);

    USB->DAINTMSK |= (1 << epnum);

    /* Both TXFD and TXSA are in unit of 32-bit words. */
    /* IN FIFO 0 was configured during enumeration, hence the "+ 16". */
    uint16_t const allocated_size = (USB->GRXFSIZ & _USB_GRXFSIZ_RXFDEP_MASK) + 16;
    uint16_t const fifo_size = (EP_FIFO_SIZE/4 - allocated_size) / (EP_FIFO_NUM-1);
    uint32_t const fifo_offset = allocated_size + fifo_size*(fifo_num-1);

    /* DIEPTXF starts at FIFO #1. */
    volatile uint32_t* usb_dieptxf = &USB->DIEPTXF1;
    usb_dieptxf[epnum - 1] = (fifo_size << _USB_DIEPTXF1_INEPNTXFDEP_SHIFT) | fifo_offset;
  }
  return true;
}

bool dcd_edpt_xfer(uint8_t rhport, uint8_t ep_addr, uint8_t* buffer, uint16_t total_bytes)
{
  (void)rhport;

  uint8_t const epnum = tu_edpt_number(ep_addr);
  uint8_t const dir   = tu_edpt_dir(ep_addr);

  xfer_ctl_t * xfer = XFER_CTL_BASE(epnum, dir);
  xfer->buffer       = buffer;
  xfer->total_len    = total_bytes;
  xfer->queued_len   = 0;
  xfer->short_packet = false;

  uint16_t num_packets = (total_bytes / xfer->max_size);
  uint8_t short_packet_size = total_bytes % xfer->max_size;

  // Zero-size packet is special case.
  if(short_packet_size > 0 || (total_bytes == 0))
  {
    num_packets++;
  }

  // IN and OUT endpoint xfers are interrupt-driven, we just schedule them
  // here.
  if(dir == TUSB_DIR_IN)
  {
    if(epnum == 0)
    {
      // A full IN transfer (multiple packets, possibly) triggers XFRC.
      USB->DIEP0TSIZ = (num_packets << _USB_DIEP0TSIZ_PKTCNT_SHIFT) | total_bytes;
      USB->DIEP0CTL |= USB_DIEP0CTL_EPENA | USB_DIEP0CTL_CNAK; // Enable | CNAK
    }
    else
    {
      // A full IN transfer (multiple packets, possibly) triggers XFRC.
      USB->DIEP[epnum - 1].TSIZ = (num_packets << _USB_DIEP_TSIZ_PKTCNT_SHIFT) | total_bytes;
      USB->DIEP[epnum - 1].CTL |= USB_DIEP_CTL_EPENA | USB_DIEP_CTL_CNAK; // Enable | CNAK
    }

    // Enable fifo empty interrupt only if there are something to put in the fifo.
    if(total_bytes != 0)
    {
      USB->DIEPEMPMSK |= (1 << epnum);
    }
  }
  else
  {
    if(epnum == 0)
    {
      // A full IN transfer (multiple packets, possibly) triggers XFRC.
      USB->DOEP0TSIZ |= (1 << _USB_DOEP0TSIZ_PKTCNT_SHIFT) | ((xfer->max_size & _USB_DOEP0TSIZ_XFERSIZE_MASK) << _USB_DOEP0TSIZ_XFERSIZE_SHIFT);
      USB->DOEP0CTL |= USB_DOEP0CTL_EPENA | USB_DOEP0CTL_CNAK;
    }
    else
    {
      // A full IN transfer (multiple packets, possibly) triggers XFRC.
      USB->DOEP[epnum - 1].TSIZ |= (1 << _USB_DOEP_TSIZ_PKTCNT_SHIFT) | ((xfer->max_size & _USB_DOEP_TSIZ_XFERSIZE_MASK) << _USB_DOEP_TSIZ_XFERSIZE_SHIFT);
      USB->DOEP[epnum - 1].CTL |= USB_DOEP_CTL_EPENA | USB_DOEP_CTL_CNAK;
    }
  }
  return true;
}

void dcd_int_handler(uint8_t rhport)
{
  (void) rhport;

  const uint32_t int_status = USB->GINTSTS;

  /* USB Reset */
  if(int_status & USB_GINTSTS_USBRST)
  {
    /* start of reset */
    USB->GINTSTS = USB_GINTSTS_USBRST;
    /* FIFOs will be reassigned when the endpoints are reopen */
    _allocated_fifos = 1;
    bus_reset();
  }

  /* Reset detected Interrupt */
  if(int_status & USB_GINTSTS_RESETDET)
  {
    USB->GINTSTS = USB_GINTSTS_RESETDET;
    bus_reset();
  }

  /* Enumeration Done */
  if(int_status & USB_GINTSTS_ENUMDONE)
  {
    /* This interrupt is considered the end of reset. */
    USB->GINTSTS = USB_GINTSTS_ENUMDONE;
    enum_done_processing();
    dcd_event_bus_signal(0, DCD_EVENT_BUS_RESET, true);
  }

  /* OTG Interrupt */
  if(int_status & USB_GINTSTS_OTGINT)
  {
    /* OTG INT bit is read-only */

    uint32_t const otg_int = USB->GOTGINT;

    if(otg_int & USB_GOTGINT_SESENDDET)
    {
      dcd_event_bus_signal(0, DCD_EVENT_UNPLUGGED, true);
    }

    USB->GOTGINT = otg_int;
  }

  #if USE_SOF
  if(int_status & USB_GINTSTS_SOF)
  {
    USB->GINTSTS = USB_GINTSTS_SOF;
    dcd_event_bus_signal(0, DCD_EVENT_SOF, true);
  }
  #endif

  /* RxFIFO Non-Empty */
  if(int_status & USB_GINTSTS_RXFLVL)
  {
    /* RXFLVL bit is read-only */

    /* Mask out RXFLVL while reading data from FIFO */
    USB->GINTMSK &= ~USB_GINTMSK_RXFLVLMSK;
    read_rx_fifo();
    USB->GINTMSK |= USB_GINTMSK_RXFLVLMSK;
  }

  /* OUT Endpoints Interrupt */
  if(int_status & USB_GINTMSK_OEPINTMSK)
  {
    /* OEPINT is read-only */
    handle_epout_ints();
  }

  /* IN Endpoints Interrupt */
  if(int_status & USB_GINTMSK_IEPINTMSK)
  {
    /* IEPINT bit read-only */
    handle_epin_ints();
  }

  /* unhandled */
  USB->GINTSTS |= USB_GINTSTS_CURMOD      |
                  USB_GINTSTS_MODEMIS     |
                  USB_GINTSTS_OTGINT      |
                  USB_GINTSTS_NPTXFEMP    |
                  USB_GINTSTS_GINNAKEFF   |
                  USB_GINTSTS_GOUTNAKEFF  |
                  USB_GINTSTS_ERLYSUSP    |
                  USB_GINTSTS_USBSUSP     |
                  USB_GINTSTS_ISOOUTDROP  |
                  USB_GINTSTS_EOPF        |
                  USB_GINTSTS_EPMIS       |
                  USB_GINTSTS_INCOMPISOIN |
                  USB_GINTSTS_INCOMPLP    |
                  USB_GINTSTS_FETSUSP     |
                  USB_GINTSTS_PTXFEMP;
}
